--- a/index.html
+++ b/index.html
@@ -8,60 +8,40 @@
     </head>
 
     <body>
-        <h1> Minha Casa Simples </h1>
-        <h4> Casa, Cinza, simples </h4>
-        <h4>Endereço: Rua da Minha Casa, Simples </h4>
+
+        <div class="cabecalho">
+            <div>
+                <h1> Minha Casa Simples </h1>
+            </div>
+           <div>
+                <h4> Casa, Cinza, simples </h4>
+                <h4>Endereço: Rua da Minha Casa, Simples </h4>
+            </div>
+        </div>
 
         <img src="casa.jpeg" width="200" height="200">
 
         <h2> Descrição </h2>
-            <ul>
+         <ul>
                 <li> Casa cinza </li>
                 <li> Bem simples </li>
                 <li> Na rua </li>
                 <li> tem porta </li>
                 <li> bonita </li>
-            </ul>
+        </ul>
 
         <h3> Objetivos </h3>
-            <ul>
+        <ul>
                 <li> Morar </li>
                 <li> Ser feliz </li>
                 <li> Ter conforto </li>
                 <Li> Se abrigar </Li>
+        </ul>
 
 
+        <a href="https://wa.me/5541987409668" class= "whatsapp-button" target="_blank"> Compre já sua casa cinza simples</a>
 
-
-
-
-            </ul>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            
     </body>
-
-
-
-
-
-
-
-
-
-
-
-
 
 </html>
